# sxgevalplatform

./: .gitignore  API_Documentation.md  README.md  azure-pipelines.yml  nuget.config  sxg-eval-platform.sln
docs/: README.md  (+17 more)
src/Eval-Runner/SXG.EvalPlatform.EvaluationEngine/: .gitignore  Dockerfile  README.md  appsettings.Development.json  appsettings.Local.json  appsettings.PPE.json  appsettings.Production-EastUS2.json  appsettings.Production-WestUS2.json  appsettings.Production.json  appsettings.example.json  appsettings.json  appsettings.template.json  assign-rbac-roles.ps1  assign-rbac-roles.sh  deploy-bulletproof-fixed.ps1  deploy-bulletproof.ps1  deploy.ps1  deploy.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sanitize-requirements.ps1  setup-ppe-managed-identity.ps1  validate-config.ps1  validate-environment-config.ps1  validate-ppe-deployment.ps1
src/Eval-Runner/SXG.EvalPlatform.EvaluationEngine/deployment/: README.md  container-app-parameters-Development-temp.json  container-app-parameters-dev-temp.json  container-app-parameters-ppe.json  container-app-parameters.json  container-app-template.json
src/Eval-Runner/SXG.EvalPlatform.EvaluationEngine/deployment/EastUS2/: ContainerApp-parameter.json  ContainerApp-template.json
src/Eval-Runner/SXG.EvalPlatform.EvaluationEngine/deployment/Scripts/: RoleAssigmentProdEastUS2.ps1  deploy-production-eastus2.ps1  deploy-production-westus2.ps1  setup-foundry-eastus2.ps1  setup-foundry-storage-eastus2.ps1  setup-foundry-storage-northcentral.ps1  setup-foundry-westus2.ps1  setup-production-infrastructure.ps1  (+2 more)
src/Eval-Runner/SXG.EvalPlatform.EvaluationEngine/docs/: API_DOCUMENTATION.md  AZURE_AI_FOUNDRY_MANAGED_IDENTITY.md  AZURE_STORAGE_MANAGED_IDENTITY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  EVALUATORS_README.md  MANAGED_IDENTITY_GUIDE.md  PERFORMANCE_GUIDE.md  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICK_DEPLOY.md  TROUBLESHOOTING_GUIDE.md
src/Eval-Runner/SXG.EvalPlatform.EvaluationEngine/scripts/: README.md  URGENT-admin-fix.ps1  admin-complete-setup.ps1  assign-minimum-permissions.ps1  provision-azure-resources.ps1  quick-fix-acr-permission.ps1  setup-managed-identity-permissions.ps1  setup.ps1  validate-managed-identity-config.ps1  verify-and-fix-permissions.ps1
src/Eval-Runner/SXG.EvalPlatform.EvaluationEngine/src/: main.py
src/Eval-Runner/SXG.EvalPlatform.EvaluationEngine/tests/: README.md
(+769 files in other folders)
